add vs code debugger config for local dev

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@ SOFTWARE.
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
